--- a/scss/index.scss
+++ b/scss/index.scss
@@ -113,7 +113,7 @@ main {
                             color: $gray1;
                             position: absolute;
                             top: 70%;
-                            right: 0%;
+                            right: -10%;
                             font-size: calc(12px + 1.5vw);
                             transform: scale(0);
         
@@ -135,16 +135,53 @@ main {
                     .intro_wave {
                         display: block;
                         position: absolute;
-                        width: 500px;
-                        height: 500px;
-                        background-color: #fff;
-                        
+                        width: calc(200px + 10vw);
+                        height: calc(200px + 10vw);
+                        background: white;
                         opacity: 0.5;
+                        box-shadow: 0px 0px 30px 30px white;
                         border-radius: 250px;
                         top: 50%;
                         left: 50%;
                         transform: translate(-50%, -50%);
                         z-index: -2;
+
+                        @include responsive(tablet-cat) {
+                            width: calc(250px + 10vw);
+                            height: calc(250px + 10vw);
+                        }
+
+                        @include responsive(semi-cat) {
+                            width: 400px;
+                            height: 400px;
+                        }
+
+                        @include responsive(huge-cat) {
+                            width: 450px;
+                            height: 450px;
+                        }
+
+                        &>div {
+                            position: absolute;
+                            top: 50%;
+                            left: 50%;
+                            translate: -50% -50%;
+                            width: 200%;
+                            height: 200%;
+                            scale: 0;
+                            border-radius: 50%;
+
+                            &:first-child {
+                                display: block;
+                                border: 5px dashed white;
+
+                            }
+
+                            &:last-child {
+                                display: block;
+                                border: 5px solid white;
+                            }
+                        }
                     }
                     
                 }
@@ -435,7 +472,7 @@ main {
                                     width: 60%;
                                     right: 15%;
                                     top: -10%;
-                                    transform: rotateZ(-10deg);
+                                    rotate: rotateZ(-10deg);
 
                                     @include responsive(tablet-cat) {
                                         top: -15%;
@@ -617,7 +654,7 @@ main {
                                 }
 
                                 &:nth-child(2) {
-                                    transform: rotateZ(90deg);
+                                    rotate: (90deg);
                                     transform-origin: left top;
                                 }
 
@@ -823,81 +860,113 @@ main {
 
                     }
 
-                    .descri_explain {
-
+                    .descri_explains {
                         @include nyan_small_margin;
 
-                        .explain_title {
+                        .descri_explain {
 
-                            p {
-                                font-size: calc(10px + 1vw);
-                                line-height: 2em;
-                                text-align: justify;
-
-                                @include responsive(tablet-cat) {
-                                    font-size: calc(8px + 1vw);
-                                }
-        
-                                @include responsive(semi-cat) {
-                                    font-size: 24px;
-                                }
-        
-                                @include responsive(huge-cat) {
-                                    font-size: 28px;
-                                }
-
-                                span.descri_keyword {
-                                    color: $identity;
-                                    display: block;
-                                    text-align: center;
-                                    font-size: 2em;
-                                    margin-bottom: $petit_margin_p;
-
+    
+                            .explain_title {
+                                position: relative;
+    
+                                p {
+                                    font-size: calc(10px + 1vw);
+                                    line-height: 2em;
+                                    text-align: justify;
+    
                                     @include responsive(tablet-cat) {
-                                        display: inline;
-                                        text-align: justify;
-                                        font-size: 1.5em;
-                                        margin-bottom: $petit_margin_t;
+                                        font-size: calc(8px + 1vw);
                                     }
             
                                     @include responsive(semi-cat) {
-                                        font-size: 36px;
-                                        margin-bottom: $petit_margin_s;
+                                        font-size: 24px;
                                     }
             
                                     @include responsive(huge-cat) {
-                                        font-size: 40px;
-                                        margin-bottom: $petit_margin_h;
+                                        font-size: 28px;
+                                    }
+    
+                                    span.descri_keyword {
+                                        color: $identity;
+                                        display: block;
+                                        text-align: center;
+                                        font-size: 2em;
+                                        margin-bottom: $petit_margin_p;
+    
+                                        @include responsive(tablet-cat) {
+                                            display: inline;
+                                            text-align: justify;
+                                            font-size: 1.5em;
+                                            margin-bottom: $petit_margin_t;
+                                        }
+                
+                                        @include responsive(semi-cat) {
+                                            font-size: 36px;
+                                            margin-bottom: $petit_margin_s;
+                                        }
+                
+                                        @include responsive(huge-cat) {
+                                            font-size: 40px;
+                                            margin-bottom: $petit_margin_h;
+                                        }
                                     }
                                 }
+    
                             }
-
-                        }
-
-                        .explain_contents {
-                            @include nyan_tiny_margin;
-
-                            p {
-                                font-size: calc(10px + 1vw);
-                                line-height: 2em;
-                                text-align: justify;
-
-                                @include responsive(tablet-cat) {
-                                    font-size: calc(6px + 1vw);
-                                }
     
-                                @include responsive(semi-cat) {
-                                    font-size: 18px;
+                            .explain_contents {
+                                @include nyan_tiny_margin;
+                                position: relative;
+
+                                p {
+                                    font-size: calc(10px + 1vw);
+                                    line-height: 2em;
+                                    text-align: justify;
+                                    position: relative;
+    
+                                    @include responsive(tablet-cat) {
+                                        font-size: calc(6px + 1vw);
+                                    }
+        
+                                    @include responsive(semi-cat) {
+                                        font-size: 18px;
+                                        
+                                    }
+        
+                                    @include responsive(huge-cat) {
+                                        font-size: 21px;
+        
+                                    }
+
+                                    .am_under {
                                     
-                                }
-    
-                                @include responsive(huge-cat) {
-                                    font-size: 21px;
-    
+                                        color: $identity;
+                                        z-index: -1;
+                                        
+                                        box-shadow: inset 0 calc(calc(10px + 1vw) / -2) 0 rgba($color: $identity, $alpha: 0.3);
+
+                                        @include responsive(tablet-cat) {
+                                            box-shadow: inset 0 calc(calc(6px + 1vw) / -2) 0 rgba($color: $identity, $alpha: 0.3);
+                                        }
+            
+                                        @include responsive(semi-cat) {
+                                            box-shadow: inset 0 -9px 0 rgba($color: $identity, $alpha: 0.3);
+                                            
+                                        }
+            
+                                        @include responsive(huge-cat) {
+                                            box-shadow: inset 0 -10.5px 0 rgba($color: $identity, $alpha: 0.3);
+            
+                                        }
+
+                                        
+                                    }
                                 }
                             }
                         }
                     }
+
+
 
                     .descri_gauge {
                         
