--- a/scss/animation.scss
+++ b/scss/animation.scss
@@ -200,6 +200,18 @@
     }
 }
 
+@keyframes oo {
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes xx {
+    100%{
+        transform: rotate(-360deg);
+    }
+}
+
 
 
 
