--- a/css/javascript.css
+++ b/css/javascript.css
@@ -11,6 +11,18 @@
 /*=================svg 필터=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
+/*=================중단점=================*/
+/*=================톤앤매너=================*/
+/*=================톤앤매너(스킬)=================*/
+/*=================svg 필터=================*/
+/*=================폰트패밀리=================*/
+/*=================여백=================*/
+/*=================중단점=================*/
+/*=================톤앤매너=================*/
+/*=================톤앤매너(스킬)=================*/
+/*=================svg 필터=================*/
+/*=================폰트패밀리=================*/
+/*=================여백=================*/
 .no {
   display: none;
 }
@@ -28,7 +40,6 @@
   width: 100%;
   background-color: rgba(0, 6, 32, 0.3);
 }
-
 span.mk_highlight {
   color: #e54d26;
 }
@@ -36,4 +47,41 @@ span.mk_highlight {
 .next_style {
   top: 2em;
   opacity: 0;
+}
+
+.common_under {
+  color: #e87d9e;
+  z-index: -1;
+  box-shadow: inset 0 calc((10px + 1vw) / -2) 0 rgba(232, 125, 158, 0.3);
+}
+@media screen and (min-width: 768px) {
+  .common_under {
+    box-shadow: inset 0 calc((6px + 1vw) / -2) 0 rgba(232, 125, 158, 0.3);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .common_under {
+    box-shadow: inset 0 -9px 0 rgba(232, 125, 158, 0.3);
+  }
+}
+@media screen and (min-width: 1600px) {
+  .common_under {
+    box-shadow: inset 0 -10.5px 0 rgba(232, 125, 158, 0.3);
+  }
+}
+
+.kitty_img_add {
+  scale: 0;
+  opacity: 0;
+}
+
+.kitty_txt_add {
+  opacity: 0;
+  transform: translateY(15%);
+}
+
+.contents_fw_add {
+  opacity: 0;
+  transform: translateY(150%) scaleY(1);
+  transform-origin: top;
 }
