--- a/scss/index.scss
+++ b/scss/index.scss
@@ -940,24 +940,7 @@ main {
 
                                     .am_under {
                                     
-                                        color: $identity;
-                                        z-index: -1;
-                                        
-                                        box-shadow: inset 0 calc(calc(10px + 1vw) / -2) 0 rgba($color: $identity, $alpha: 0.3);
-
-                                        @include responsive(tablet-cat) {
-                                            box-shadow: inset 0 calc(calc(6px + 1vw) / -2) 0 rgba($color: $identity, $alpha: 0.3);
-                                        }
-            
-                                        @include responsive(semi-cat) {
-                                            box-shadow: inset 0 -9px 0 rgba($color: $identity, $alpha: 0.3);
-                                            
-                                        }
-            
-                                        @include responsive(huge-cat) {
-                                            box-shadow: inset 0 -10.5px 0 rgba($color: $identity, $alpha: 0.3);
-            
-                                        }
+                                        @include common_under;
 
                                         
                                     }
@@ -976,21 +959,27 @@ main {
                         @include nyan_small_margin;
                         
                         .num {
-                            font-size: calc(6px + 2vw);
-                            text-align: center;
-                            cursor: pointer;
 
-                            @include responsive(tablet-cat) {
-                                font-size: calc(10px + 1vw);
+                            p {
+                                width: fit-content;
+                                margin: 0 auto;
+                                font-size: calc(6px + 2vw);
+                                text-align: center;
+                                cursor: pointer;
+    
+                                @include responsive(tablet-cat) {
+                                    font-size: calc(10px + 1vw);
+                                }
+    
+                                @include responsive(semi-cat) {
+                                    font-size: 21px;
+                                }
+    
+                                @include responsive(huge-cat) {
+                                    font-size: 24px;
+                                }
                             }
 
-                            @include responsive(semi-cat) {
-                                font-size: 21px;
-                            }
-
-                            @include responsive(huge-cat) {
-                                font-size: 24px;
-                            }
                         }
 
                         .gauge_toggle {
@@ -1441,6 +1430,35 @@ main {
                             margin-top: 20px;
                             font-size: 24px;
                         }
+                    }
+                }
+
+                .ms_contents_fw {
+                    position: absolute;
+                    display: block;
+                    width: calc(2px + 0.5vw);
+                    height: calc(75px + 10vw);
+                    border-radius: 10px;
+                    background-color: #fff;
+                    background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.6) 50%, rgba(255,255,255,1) 100%);
+                    // top: 200%;
+                    top: 50%;
+                    left: 50%;
+
+                    @include responsive(tablet-cat) {
+                        width: calc(0.5vw);
+                        height: calc(75px + 5vw);
+                        border-radius: 10px;
+                    }
+
+                    @include responsive(semi-cat) {
+                        width: 5px;
+                        height: 150px;
+                    }
+
+                    @include responsive(huge-cat) {
+                        width: 6px;
+                        height: 180px;
                     }
                 }
             }
@@ -1983,6 +2001,7 @@ main {
                         }
         
                         @include responsive(semi-cat) {
+                            animation: oo 90s linear infinite;
                             width: 720px;
                             height: 720px;
                             display: block;
@@ -2005,6 +2024,7 @@ main {
                             }
 
                             @include responsive(semi-cat) {
+                                animation: oo 90s infinite linear reverse;
                                 @include ferris_wheel;
                                 width: 150px;
                                 position: absolute;
