--- a/scss/mixin.scss
+++ b/scss/mixin.scss
@@ -905,3 +905,24 @@
         }
     }
 }
+
+@mixin common_under {
+    color: $identity;
+    z-index: -1;
+    
+    box-shadow: inset 0 calc(calc(10px + 1vw) / -2) 0 rgba($color: $identity, $alpha: 0.3);
+
+    @include responsive(tablet-cat) {
+        box-shadow: inset 0 calc(calc(6px + 1vw) / -2) 0 rgba($color: $identity, $alpha: 0.3);
+    }
+
+    @include responsive(semi-cat) {
+        box-shadow: inset 0 -9px 0 rgba($color: $identity, $alpha: 0.3);
+        
+    }
+
+    @include responsive(huge-cat) {
+        box-shadow: inset 0 -10.5px 0 rgba($color: $identity, $alpha: 0.3);
+
+    }
+}
